--- a/Frontend/BudgetTrackerUI/src/styles.scss
+++ b/Frontend/BudgetTrackerUI/src/styles.scss
@@ -31,6 +31,13 @@ html {
   /* Pour les boutons au survol (optionnel) */
   --mat-button-filled-state-layer-color: rgba(255, 255, 255, 0.1);
 
+  /* couleur pour les graph */
+  --color-account-cc: #0077ff;
+  --color-account-savings: #FEB019;
+  --color-account-pea: #00E396;
+  --color-account-life-insurrance: #775DD0;
+  --color-success: #e300bd;
+  --color-danger: #FF4560;
 }
 
 body {
