MàJ stock cached ticker price : appeler au lancement de l'app, pas de snackbar si pas de mise à jour

--- a/Frontend/BudgetTrackerUI/src/styles.scss
+++ b/Frontend/BudgetTrackerUI/src/styles.scss
@@ -36,7 +36,7 @@ html {
   --color-account-savings: #FEB019;
   --color-account-pea: #00E396;
   --color-account-life-insurrance: #775DD0;
-  --color-success: #e300bd;
+  --color-success: #5ec26b;
   --color-danger: #FF4560;
 }
 
