Renommage Catégorie (fr) en Category (en)

--- a/Frontend/BudgetTrackerUI/src/app/cc-categories/cc-categories.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-categories/cc-categories.html
@@ -1,4 +1,4 @@
-<h2>Liste des Catégories</h2>
+<h2>Liste des Categories</h2>
 
 <button mat-flat-button color="primary" (click)="addCategory()">
   <mat-icon>add</mat-icon>
