--- a/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
@@ -23,11 +23,11 @@
     <mat-chip-listbox multiple>
       <mat-chip-option [selected]="filterMissingCat" (click)="toggleExtraFilter('missing')" color="accent">
         <mat-icon matChipAvatar>quiz</mat-icon>
-        Catégories manquantes
+        Categories manquantes
       </mat-chip-option>
       <mat-chip-option [selected]="filterSuggestedCat" (click)="toggleExtraFilter('suggested')" color="accent">
         <mat-icon matChipAvatar>category</mat-icon>
-        Catégories suggérées
+        Categories suggérées
       </mat-chip-option>
       <mat-chip-option [selected]="filterOnlyCheques" (click)="toggleExtraFilter('cheque')" color="accent">
         <mat-icon matChipAvatar>payments</mat-icon>
