--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -39,7 +39,7 @@
 
     <a mat-list-item routerLink="/cc-categories" routerLinkActive="active-link">
       <mat-icon matListItemIcon>category</mat-icon>
-      <span matListItemTitle>Catégories</span>
+      <span matListItemTitle>Categories</span>
     </a>
 
   </div>
