Page unifiée avec liste des comptes, suppr ancien composants. Fix saisie Savings

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -8,9 +8,9 @@
       <span matListItemTitle>Patrimoine</span>
     </a>
 
-    <a mat-list-item routerLink="/account-status" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
-      <mat-icon matListItemIcon>error</mat-icon>
-      <span matListItemTitle>Status</span>
+    <a mat-list-item routerLink="/account-list" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+      <mat-icon matListItemIcon>list</mat-icon>
+      <span matListItemTitle>Liste des comptes</span>
     </a>
   </div>
 
@@ -51,11 +51,6 @@
       <mat-icon matListItemIcon>table_view</mat-icon>
       <span matListItemTitle>Statement</span>
     </a>
-
-    <a mat-list-item routerLink="/savings-account-list" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>list</mat-icon>
-      <span matListItemTitle>Liste livrets</span>
-    </a>
   </div>
 
   <div class="nav-group">
@@ -66,7 +61,7 @@
     </a>
 
     <a mat-list-item routerLink="/pea-input" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>list</mat-icon>
+      <mat-icon matListItemIcon>table_view</mat-icon>
       <span matListItemTitle>Opérations</span>
     </a>
   </div>
@@ -77,11 +72,6 @@
     <a mat-list-item routerLink="/li-statement" routerLinkActive="active-link">
       <mat-icon matListItemIcon>table_view</mat-icon>
       <span matListItemTitle>Relevés</span>
-    </a>
-
-    <a mat-list-item routerLink="/li-list" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>list</mat-icon>
-      <span matListItemTitle>Liste AV</span>
     </a>
   </div>
 
