--- a/Frontend/BudgetTrackerUI/src/styles.scss
+++ b/Frontend/BudgetTrackerUI/src/styles.scss
@@ -30,6 +30,7 @@ html {
   --mat-button-filled-state-layer-color: rgba(255, 255, 255, 0.1);
 
   /* couleur pour les graph */
+  --color-account-global: #083D77;
   --color-account-cc: #61C9A8;
   --color-account-savings: #F95738;
   --color-account-pea: #F4D35E;
